--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ width=device-width, height=device-height" />
         <title>Powered by CrossUI No-Code App Builder</title>
 </head>
 <body>
+    <button type="button" onclick="load()">Test</button>
       <div id="loading" style="position:fixed;width:100%;text-align:center;">
           <img id="loadingimg" alt="Loading..." title="Loading..." src="//www.crossui.com/libs/2.0/loading.gif" />
       </div>
@@ -27,7 +28,7 @@ width=device-width, height=device-height" />
 <script type="text/javascript" src="//www.crossui.com/libs/2.0/js/xui-all.js"></script>
 <script type="text/javascript" src="xuiconf.js"></script>
 <script type="text/javascript">
-    function(){
+    function load(){
         alert('Hello world');
     }
     if(typeof(xui)!=="undefined") xui.launch(xui.getUrlParams().cls||'App/js/index.js', function(){xui('loading').remove()});
